added imgs and styles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Deep Into Shruti</title>
+        <title>Too Deep In</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="assets/styles/style.css">
@@ -26,10 +26,10 @@
                             <li><a href="#0" data-date="16/01/2014" class="selected">Hi</a></li>
                             <li><a href="#0" data-date="28/03/2014">Apologies</a></li>
                             <li><a href="#0" data-date="20/05/2014">Why</a></li>
-                            <li><a href="#0" data-date="20/07/2014">Destiny</a></li>
-                            <li><a href="#0" data-date="09/09/2014">Inevitable</a></li>
-                            <li><a href="#0" data-date="30/10/2014">Meant to be</a></li>
-                            <li><a href="#0" data-date="15/12/2014">Sikhs</a></li>
+                            <li><a href="#0" data-date="20/07/2014">You</a></li>
+                            <li><a href="#0" data-date="09/09/2014">Me</a></li>
+                            <li><a href="#0" data-date="30/10/2014">Say Yes!</a></li>
+                            <li><a href="#0" data-date="15/12/2014">Bye</a></li>
                             <li class="no-disp"><a href="#0" data-date="01/01/2015">Together</a></li>
                             <li class="no-disp"><a href="#0" data-date="03/02/2015">Together</a></li>
                         </ol>
@@ -116,13 +116,13 @@
         
                     <li data-date="15/12/2014">
                         <div class="flex-div">
-                            <img src='./assets/imgs/good.png' />
                             <div class="flex-div">
                                 <p>And that's pretty much all I am and all I want from you. I'm not a bad guy or some clingy creep who'll keep texting and troubling you. Haven't done anything like this for anyone nor do I think I will ever again.
                                 </br> Hope I'll hear from you. :)
                                 </p>
 
                             </div>
+                            <img src='./assets/imgs/good.png' />
                             </div>
                     </li>
                     <!-- <li data-date="01/01/2015">
