added imgs and styles

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <li class="selected" data-date="16/01/2014">
                         <!-- <h2>Hello!</h2> -->
                         <!-- <em>January 16th, 2014</em> -->
-                        <img src='https://media.giphy.com/media/c9ndlj2AUhaqk/giphy.gif'>
+                        <img class='img-gif' src='https://media.giphy.com/media/c9ndlj2AUhaqk/giphy.gif'>
                         <p>I've run out ways to convince you to give me another chance, so here goes nothing.</br> Trying to get through to you with the only thing I know.</p>
                     </li>
         
