added imgs and styles

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <!-- <h2>Hello!</h2> -->
                         <!-- <em>January 16th, 2014</em> -->
                         <img class='img-gif' src='https://media.giphy.com/media/c9ndlj2AUhaqk/giphy.gif'>
-                        <p>I've run out ways to convince you to give me another chance, so here goes nothing.</br> Trying to get through to you with the only thing I know.</p>
+                        <p>I've run out ways to convince you to give me another chance, so here goes nothing.</br>I feel incredibly stupid doing this but I'm gonna try to get through to you with the only thing I know. Code.</p>
                     </li>
         
                     <li data-date="28/03/2014">
@@ -56,7 +56,7 @@
                             <div class="flex-div">
                             <img class="img-med" src='./assets/imgs/sorry.png' />
                             <div class="flex-div">
-                                <p>Blaming alcohol or my bad company at that time, doesn't feel completly honest. I did what I did because I've been an entitled brat most of my life and when you refused my advances it probably triggred my ego, which it turn was further fueled by the people around me at the time and upar se that Sunday I had been drinking since the morning which surely didn't help either. I've never been more remorseful about anything in my life.</br>I truly am sorry about it.</p>
+                                <p>First off just let me tell you I'm sorry. I was drunk, high, impulsive, stupid and I've never been more remorseful about anything in my life.</br>I truly am sorry about it.</p>
                             </div>
                             </div>
                     </li>
@@ -85,7 +85,7 @@
                     <li data-date="20/07/2014">
                         <!-- <em>May 20th, 2014</em> -->
                         <img class="img-med" src='./assets/imgs/pretty.png' />
-                        <p>You are just the right measure of beauty and brains and not too mention <b>you're cute af.</b>
+                        <p style="text-overflow: ellipsis; white-space: nowrap; line-height: 2;" class="col-md-12">You are just the right measure of beauty and brains and not too mention <b>you're cute af.</b>
                         </br>Your pic in your yellow suit, sitting in your office with that enchanting smile is still fresh in my head.
                         </br>You sitting in my car with your hair down playing your music is a memory that just refuses to leave me alone.
                         </p>
@@ -94,7 +94,7 @@
         
                     <li data-date="09/09/2014">
                         <div class="flex-div">
-                            <img class="img-med" src='./assets/imgs/swear.png' />
+                            <img class="img-med" src='./assets/imgs/talk.png' />
                             <div class="flex-div">
                                 <p>I'm not playing around or fooling with you. Trust me. I wanna be friends with you first, continue getting to know you better and if anything sparks then be something more than just friends. Give me time, another chance. I crave winning back the trust I broke.</p>
                             </div>
@@ -105,7 +105,7 @@
                         <div class="flex-div">
                             <img class='img-high'src='./assets/imgs/deepShruti.jpg' />
                             <div class="flex-div">
-                                <p>So please say yes and you'll make me the happiest guy out there.</p>
+                                <p>So please gimme a chance and you'll make me the happiest guy out there.</p>
                             </div>
                             </div>
                     </li>
