--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
                         <div class="flex-div">
                             <div class="flex-div col left">
                                 <p class="why-container">
-                                    <h5>Reasons I think we should give it a try atleast.</h5>
-                                    </br><span><span><img class="tick" src='./assets/imgs/check.svg'/></span>I love to travel, we could tavel together.</span>
-                                    </br><span><span><img class="tick" src='./assets/imgs/check.svg'/></span>Loyal and independent, Never cheated, never will.</span>
-                                    </br><span><span><img class="tick" src='./assets/imgs/check.svg'/></span>I'm versaltile, can be little or big spoon.</span>
-                                    </br><span><span><img class="tick" src='./assets/imgs/check.svg'/></span>Good listener, will listen to all you've got to say as we drive through the city</span>
-                                    </br><span><span><img class="tick" src='./assets/imgs/check.svg'/></span>I can cook, my pasta will have you begging for more.</span>
-                                    </br><span><span><img class="tick" src='./assets/imgs/check.svg'/></span>I like to read, I can recommend you some good titles</span>
-                                    </br><span><span><img class="tick" src='./assets/imgs/check.svg'/></span>Can be your +1 to all the stand up shows in town.</span>
-                                    </br><span><span><img class="tick" src='./assets/imgs/check.svg'/></span>Drinking bud, I can be your drinking buddy if that is still your vice.</span>
+                                    <h5 style="font-size: 2rem;">Reasons I think we should give it a try atleast.</h5>
+                                    </br><span style="font-size: 1.5rem;"><span><img class="tick" src='./assets/imgs/check.svg'/></span>I love to travel, we could tavel together.</span>
+                                    </br><span style="font-size: 1.5rem;"><span><img class="tick" src='./assets/imgs/check.svg'/></span>Loyal and independent, Never cheated, never will.</span>
+                                    </br><span style="font-size: 1.5rem;"><span><img class="tick" src='./assets/imgs/check.svg'/></span>I'm versaltile, can be little or big spoon.</span>
+                                    </br><span style="font-size: 1.5rem;"><span><img class="tick" src='./assets/imgs/check.svg'/></span>Good listener, will listen to all you've got to say as we drive through the city</span>
+                                    </br><span style="font-size: 1.5rem;"><span><img class="tick" src='./assets/imgs/check.svg'/></span>I can cook, my pasta will have you begging for more.</span>
+                                    </br><span style="font-size: 1.5rem;"><span><img class="tick" src='./assets/imgs/check.svg'/></span>I like to read, I can recommend you some good titles</span>
+                                    </br><span style="font-size: 1.5rem;"><span><img class="tick" src='./assets/imgs/check.svg'/></span>Can be your +1 to all the stand up shows in town.</span>
+                                    </br><span style="font-size: 1.5rem;"><span><img class="tick" src='./assets/imgs/check.svg'/></span>Drinking bud, I can be your drinking buddy if that is still your vice.</span>
                                 </p>
                             </div>
                             <img class="img-med" src='./assets/imgs/deep.png' />
