added imgs and styles

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                             <div class="flex-div">
                                 <p>And that's pretty much all I am and all I want from you. I'm not a bad guy or some clingy creep who'll keep texting and troubling you. Haven't done anything like this for anyone nor do I think I will ever again.
                                 </br> Hope I'll hear from you. :)
+                                </br> If not just block me or something, idk I'm pretty strong willed but not when it comes to you.
                                 </p>
 
                             </div>
