added imgs and styles

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <li data-date="20/07/2014">
                         <!-- <em>May 20th, 2014</em> -->
                         <img class="img-med" src='./assets/imgs/pretty.png' />
-                        <p style="text-overflow: ellipsis; white-space: nowrap; line-height: 2;" class="col-md-12">You are just the right measure of beauty and brains and not too mention <b>you're cute af.</b>
+                        <p style="line-height: 2;" class="col-md-12">You are just the right measure of beauty and brains and not too mention <b>you're cute af.</b>
                         </br>Your pic in your yellow suit, sitting in your office with that enchanting smile is still fresh in my head.
                         </br>You sitting in my car with your hair down playing your music is a memory that just refuses to leave me alone.
                         </p>
