added imgs and styles

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <div class="flex-div">
                             <img class="img-med" src='./assets/imgs/talk.png' />
                             <div class="flex-div">
-                                <p>I'm not playing around or fooling with you. Trust me. I wanna be friends with you first, continue getting to know you better and if anything sparks then be something more than just friends. Give me time, another chance. I crave winning back the trust I broke.</p>
+                                <p>I'm not playing around or fooling with you. Trust me. Give me time, another chance. I crave winning back the trust I broke.</p>
                             </div>
                             </div>
                     </li>
