--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
                                     </br><span style="font-size: 1.5rem;"><span><img class="tick" src='./assets/imgs/check.svg'/></span>I like to read, I can recommend you some good titles</span>
                                     </br><span style="font-size: 1.5rem;"><span><img class="tick" src='./assets/imgs/check.svg'/></span>Can be your +1 to all the stand up shows in town.</span>
                                     </br><span style="font-size: 1.5rem;"><span><img class="tick" src='./assets/imgs/check.svg'/></span>Drinking bud, I can be your drinking buddy if that is still your vice.</span>
-                                </p>
+                                    </br><span style="font-size: 1.5rem;"><span><img class="tick" src='./assets/imgs/check.svg'/></span>Tendency of being unknowingly toxic at times. Working on recognizing it and fixing it.</span>
+                                  </p>
                             </div>
                             <img class="img-med" src='./assets/imgs/deep.png' />
                             </div>
