--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <div class="events">
                         <ol>
                             <li><a href="#0" data-date="16/01/2014" class="selected">Hi</a></li>
+                            <li><a href="#0" data-date="16/02/2014">Smile</a></li>
                             <li><a href="#0" data-date="28/03/2014">Apologies</a></li>
                             <li><a href="#0" data-date="20/05/2014">Why</a></li>
                             <li><a href="#0" data-date="20/07/2014">You</a></li>
@@ -48,6 +49,12 @@
                         <!-- <em>January 16th, 2014</em> -->
                         <img class='img-gif' src='https://media.giphy.com/media/c9ndlj2AUhaqk/giphy.gif'>
                         <p>I've run out ways to convince you to give me another chance, so here goes nothing.</br>I feel incredibly stupid doing this but I'm gonna try to get through to you with the only thing I know. Code.</p>
+                    </li>
+
+                    <li data-date="16/02/2014">
+                        <!-- <h2>Hello!</h2> -->
+                        <!-- <em>January 16th, 2014</em> -->
+                        <img class='img-gif' src='./assets/imgs/quote.webp'>
                     </li>
         
                     <li data-date="28/03/2014">
