--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <li data-date="16/02/2014">
                         <!-- <h2>Hello!</h2> -->
                         <!-- <em>January 16th, 2014</em> -->
-                        <img class='img-gif' src='./assets/imgs/quote.webp'>
+                        <img class='img-high' src='./assets/imgs/quote.webp'>
                     </li>
         
                     <li data-date="28/03/2014">
